--- a/templates/establishment.html
+++ b/templates/establishment.html
@@ -3,10 +3,27 @@
   font-size: .9rem;
     padding: 0 0px;
   }
-  
+    .col-md-12,.col-md-3, .col-md-4, .col-md-6,.col-md-8,.col-md-9 {
+   padding-right: 0px;
+   padding-left: 1px; 
+   }
   </style>
   
-   <div ng-controller="EstablishmentController">
+   <div ng-controller="EstablishmentController" >
+         <header id="header" class="page-topbar">
+        <div class="navbar-fixed">
+            <nav class="navbar-color">
+                    <ul class="left text-center " >                      
+                     <li style="font-size: 1.5em;padding: 0px 20px;">Eatsafe</li>
+                    </ul>
+                    <div class="nav-wrapper">
+            <!-- <div class="header-search-wrapper hide-on-med-and-down">
+              <input class="header-search-input z-depth-2" type="text" name="Search" placeholder="Search">
+            </div> -->
+          </div>
+            </nav>
+        </div>
+    </header>
    <div style="display:none" id="loadingDiv"><div class="loader">Loading...</div></div>
    <div class="row">
    <div class="col-md-12">
@@ -60,7 +77,7 @@
 			</div>
 			<div class="box-footer">
 				<div class="col-md-12">
-					<a href ng-click="saveMappedData()" id="mapBtn" class="btn btn-primary pull-right">Save</a>	
+					<a href ng-click="saveMappedData()" id="mapBtn" class="btn btn-primary btn blockt">Save</a>	
 				</div>
 			</div>
 		</div>
@@ -86,7 +103,7 @@
              <div class="tab-pane active" id="sourceTab">
             </div> -->
             <div class="box-body">
-              <div class="table-responsive" style="height:450px">
+              <div class="table-responsive" style="height:472px">
               	<input type="text" ng-model="search"  class="form-control" placeholder="Search by any column" />
                 <table class="table table-nowrap" cellpadding="10">
                 	<tbody>
@@ -134,8 +151,8 @@
 		</dir-pagination-controls>
 	</div>
 	   <div class="col-md-6" >
-			<a href  class="btn btn-primary pull-right" ng-if="csvData.records>0">Total Records: {{csvData.records}}</a>
-			<a href  class="btn btn-primary pull-right" ng-if="csvData.records==0">No Records available</a>
+			<a href  class="btn btn-primary btn-block" ng-if="csvData.records>0">Total Records: {{csvData.records}}</a>
+			<a href  class="btn btn-primary btn-block" ng-if="csvData.records==0">No Records available</a>
 		</div>
          </div>
        </div>
